@@ -2,6 +2,8 @@ dh-make-perl (0.65) UNRELEASED; urgency=low
 
   * in --refresh mode, overwrite the backups of the modified files under
     debian/
+  * in --make mode, rename any existing debian/ directory to debian.bak/,
+    overwriting the later if it exists
 
  -- Damyan Ivanov <dmn@debian.org>  Fri, 19 Feb 2010 22:47:26 +0200
 
